# poc-iota-streams

./: Cargo.toml  README.md
examples/: author-linked-messages.rs  e00-without-transport.rs  e01-author.rs  e01-subscriber.rs  e02-author-keyload.rs  e02-author-with-changekey.rs  e02-subscriber-keyload.rs  simple-author.rs  simple-subscriber.rs  subscriber-linked-messages.rs  without-transport.rs
src/: lib.rs  payload.rs
src/transport/: base.rs  mod.rs  payload.rs  tangle.rs
