[package]
name = "iota_stream_poc"
version = "0.1.0"
authors = ["Yolier Galán Tassé <gallegogt@gmail.com>"]
edition = "2018"

[lib]
name = "poc"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "author"
# path = "src/bin/author.rs"
#
# [[bin]]
# name = "subscriber"
# path = "src/bin/subscriber.rs"


[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams.git" }
anyhow = "1.0"
# iota-core = { path = "../iota.rs/iota-core" }
iota-core = { git = "https://github.com/iotaledger/iota.rs.git" }
iota-conversion = { git = "https://github.com/iotaledger/iota.rs.git" }
tokio = { version = "^0.2", features = ["full"] }
async-trait = "0.1.30"
chrono = { version = "^0.4", features = ["serde"]}
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
base64 = "^0.12"
rand = "^0.7"

[dev-dependencies]
clap = "^2.33"
# piper = "0.1.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
