[package]
name = "iota_stream_poc"
version = "0.1.0"
authors = ["Yolier Galán Tassé <gallegogt@gmail.com>"]
edition = "2018"

[lib]
name = "poc"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "author"
# path = "src/bin/author.rs"
#
# [[bin]]
# name = "subscriber"
# path = "src/bin/subscriber.rs"


[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams.git", branch="chrysalis-2",  default-features = false, features = ["std", "tangle", "async-client", "async"] }
anyhow = "1.0"

tokio = { version = "1", features = ["full"] }
chrono = { version = "^0.4", features = ["serde"]}
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
rand = "^0.7"
regex = "1.4.5"
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", branch = "dev", features = ["blake2b"]}
hex = { version = "0.4.2", default-features = false, optional = false }


[dev-dependencies]
clap = "^2.33"

[profile.release]
# lto = true
lto = "fat"
opt-level = 3
codegen-units = 1
